--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,29 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDGothic&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
+body {
+  font-family: 'BIZ UDGothic', sans-serif;
+  background: url('./images/wallpaperflare.com_wallpaper.jpg');
   color: white;
+}
+
+header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
   justify-content: center;
-  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.demo {
+  width:100%;
+  border:1px solid #CCCCCC;
+  border-collapse:collapse;
+  padding:5px;
 }
-
-@keyframes App-logo-spin {
-
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.demo th {
+  border:1px solid #CCCCCC;
+  padding:5px;
+  background:#4A4A4A;
+}
+.demo td {
+  border:1px solid #CCCCCC;
+  padding:5px;
 }
